Data Collection/slurm_14102953.out
  File "distributed_trainer.py", line 201
    print(f'Setting up DDP for GPU (rank): {rank}.')
                                                  ^
SyntaxError: invalid syntax
